--- a/src/Mostrar/Tabela.css
+++ b/src/Mostrar/Tabela.css
@@ -5,3 +5,13 @@
     align-items: center;
     margin-left:200px ;
 }
+
+/* table th{
+    width: 50px;
+} */
+
+thead th {
+    font-family: Arial, Helvetica, sans-serif;
+    height:50px;
+    font-size: 21px;
+}
